Create Component and StartComponent Class

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,5 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>First Electron App</title>
   </head>
-  <body>
-    <div class="content">
-      <h1>Start</h1>
-    </div>
-  </body>
+  <body></body>
 </html>
